# 4plop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cfr.cpp  cfr.h  chancenode.cpp  chancenode.h  deck.h  equity_calc.h  gamestate.h  gui.h  helper.h  main.cpp  node.cpp  node.h  player.h  simulation.h
phevaluator/: CMakeLists.txt  card_sampler.cpp  evaluation_plo4.cpp  evaluator_plo4.cpp  main.cpp  phevaluator.h
phevaluator/include/: phevaluator.h
phevaluator/src/: card_sampler.cpp  evaluator_plo4.cpp  hash.cpp  rank.cpp
phevaluator/tables/: dptables.cpp  hashtable.cpp  tables_bitwise.cpp
src/: chancenode.cpp  chancenode.h  deck.h  equity_calc.h  gamestate.h  gui.h  helper.h  main.cpp  node.cpp  node.h  player.h  simulation.h
tests/: CMakeLists.txt  equity_calc_test.cpp  node_test.cpp  profiling_test.cpp
